# pdflatex2

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: classes.rst  conf.py  index.rst  license.rst  pdflatex.rst  readme.rst
pdflatex2/: __init__.py  pdflatex.py  test_pdflatex.py
