# ******************************************************************************
#
# pdflatex2, a Python/PDFLaTeX interface.
#
# Copyright 2022-2026 Jeremy A Gray <gray@flyquackswim.com>.  All
# rights reserved.
#
# Copyright 2019 Marcelo Bello.
#
# SPDX-License-Identifier: MIT
#
# ******************************************************************************

[build-system]

requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.doc8]

ignore-path = [
  "*.egg-info",
  ".tox",
  ".venv",
  "**/_build",
]

[tool.pccc]

header_length = 50
body_length = 72
wrap = true
force_wrap = true
spell_check = false
repair = false
ignore_generated_commits = false

types = [
  "depends",
  "doc",
  "feat",
  "fix",
  "perf",
  "refactor",
  "release",
  "style",
  "test",
]

scopes = [
  "bin",
  "pdflatex2",
  "tooling",
]

footers = [
  "github-closes",
  "signed-off-by",
]

required_footers = [
  "signed-off-by",
]

[tool.poetry]

authors = [
  "Jeremy A Gray <gray@flyquackswim.com>",
]
description = "a Python/PDFLaTeX interface"
name = "pdflatex2"
version = "0.1.6"
license = "MIT"
maintainers = [
  "Jeremy A Gray <gray@flyquackswim.com>",
]
readme = "README.rst"
homepage = "https://github.com/jeremyagray/pdflatex2"
repository = "https://github.com/jeremyagray/pdflatex2"

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

packages = [
  { include = "pdflatex2" },
]

[tool.poetry.dependencies]

python = ">=3.12.1,<4.0"

[tool.poetry.group.dev.dependencies]

doc8 = ">=2"
hypothesis = ">=6"
pccc = ">=0"
pre-commit = ">=3"
pyfakefs = ">=5"
pytest = ">=8"
pytest-cov = ">=5"
ruff = ">=0"
sphinx = ">=7"
tox = ">=4"

[tool.poetry.scripts]

[tool.poetry.urls]

"Issues" = "https://github.com/jeremyagray/pdflatex2/issues"
"Documentation" = "https://pdflatex2.readthedocs.io/"
"Repository" = "https://github.com/jeremyagray/pdflatex2"

[tool.pytest.ini_options]

[tool.ruff.lint]

select = [
  "B",
  "C90",
  "D",
  "E",
  "F",
  "RUF",
  "S",
  "W",
]

ignore = [
  "D203",
  "D213",
]

[tool.ruff.lint.per-file-ignores]

"__init__.py" = [ "F401" ]
"test_*.py" = [ "S101" ]
