# ******************************************************************************
#
# pdflatex2, a Python/PDFLaTeX interface.
#
# Copyright 2022-2024 Jeremy A Gray <gray@flyquackswim.com>.  All
# rights reserved.
#
# Copyright 2019 Marcelo Bello.
#
# SPDX-License-Identifier: MIT
#
# ******************************************************************************

[metadata]

author = Jeremy A Gray
author_email = gray@flyquackswim.com
description = Python Conventional Commit Checker
license = GPL-3.0-or-later
license_file = LICENSE.rst
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Jeremy A Gray
maintainer_email = gray@flyquackswim.com
name = pdflatex2
url = https://github.com/jeremyagray/pdflatex2
version = 0.1.5

project_urls =
  Issues = https://github.com/jeremyagray/pdflatex2/issues
  Documentation = https://pdflatex2.readthedocs.io/
  Repository = https://github.com/jeremyagray/pdflatex2

classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Intended Audience :: Developers
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Topic :: Software Development :: Version Control :: Git

[options]

packages = pdflatex2

install_requires =
  bespon
  pyenchant
  pyparsing
  ruamel.yaml
  toml

tests_require =
  black
  factory-boy
  flake8
  flake8-docstrings
  hypothesis
  isort
  pyfakefs
  pytest
  pytest-cov
  tox

[options.entry_points]

# console_scripts =
#   pdflatex2 = pdflatex2:main
